调整用户页面Promotion Item宽度

--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/member.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/member.html
@@ -114,7 +114,7 @@
 						<i class="icon"></i><span>Promotion Item</span>
 					</div>
 					<div class="g-con swiper-container sw-everytwo">
-						<ul class="swiper-wrapper" id="promotionItem" style="height: 118px;">
+						<ul class="swiper-wrapper" id="promotionItem" style="width: 37.5rem; height: 8.25rem">
 							
 						</ul>
 					</div>
