调整了产品页面的咨询功能

--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/product.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/product.html
@@ -54,22 +54,26 @@
 			</div>
 			<div class="p-sale bort-bot">
 				<div class="maxtitle bort-bot">
-					<i class="icon"></i><span>sale</span>
+					<i class="icon"></i>
+					<span>sale</span>
 				</div>
 				<div class="title" id="saleInfo">
 					<!-- Buy 2 pieces for FREE Shipping  <i>|</i>  All goods Sales to 10% Off
 Buy 400 items sales to 40% Off -->
 				</div>
 			</div>
+			
 			<div class="g-item g-specs">
 				<div class="left">
 					specs
 				</div>
 				<div class="right">
-					<!-- <span>500ml , U.S.A Chicago , 60day</span> -->
+					<span>500ml , U.S.A Chicago , 60day</span>
 					<i class="maxrig"></i> 
 				</div>
 			</div>
+			
+			
 			<div class="g-documents">
 				<div class="maxtitle bort-bot">
 					<i class="icon"></i><span>QC Documents</span><!--  <i class="maxrig"></i> -->
@@ -266,9 +270,9 @@ Buy 400 items sales to 40% Off -->
 			</div>
 		 	
 			<div class="pro-nav">
-				<div class="left bort-top" id="news">
-					<!-- <span class="news" onclick= "window.location.href='productticket-add.html';"><i></i></span> -->
-					<!-- <span class="cart"><a href="cart.html"><i><em>8</em></i></a></span> -->
+				
+				<div class="left bort-top" >
+				<span class="news" ><i></i></span>
 				</div>
 				<!--
 				<div class="right">
@@ -311,14 +315,15 @@ Buy 400 items sales to 40% Off -->
 		 -->
 	</div>
 <!-----------------弹窗----------------->
-<!-- 
+
 <div class="pro-navnews maxmenu-overlay">
 	<div class="pro-navcon">
+		
 		<div class="title" id ="pInfo">
-			 <p>Chondroitin Sulfate USP 90% …</p>
-			<span>product id:88888888</span> 
+			 <!-- <p>Chondroitin Sulfate USP 90% …</p>
+			<span>product id:88888888</span>  -->
 		</div>
-		<form method="post">
+		
 			<div class="pro-over">
 				<img src="../img/pro-over.png">
 			</div>
@@ -333,11 +338,11 @@ Buy 400 items sales to 40% Off -->
 					<li><textarea name="Message" placeholder="message"></textarea></li>
 				</ul>
 			</div>
-			<button >SUBSCRIBE</button>
-		</form>
+			<button onclick="addProductTicket()">SUBSCRIBE</button>
+		
 	</div>
 </div>
- -->
+
 
 <!--消息弹窗 end-->
 <!-- 
