--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/product.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/product.html
@@ -21,7 +21,7 @@
 	<div class="g-main">
 		<div class="header-top">
 			<div class="left"><a href="javascript:history.back()"></a></div>
-			<div class="right"><a href="#"></a></div>
+			<!-- <div class="right"><a href="#"></a></div> -->
 		</div>
 		
 		<div class="product-slide f-l">
