--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/index-plantExtract.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/index-plantExtract.html
@@ -82,7 +82,7 @@
 // 排序
 (function(){
 	$.ajax({
-        url:homeUrl+"/products/category2/575",
+        url:homeUrl+"/products/category/575",
         type:"get",
         dataType: "json",
         async: true,
