--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/index-vitamin.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/index-vitamin.html
@@ -81,7 +81,7 @@
 <script type="text/javascript">
 (function(){
 	$.ajax({
-        url:homeUrl+"/products/category2/571",
+        url:homeUrl+"/products/category/571",
         type:"get",
         dataType: "json",
         async: true,
