--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/member-order.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/member-order.html
@@ -31,8 +31,8 @@
 			</div>
 			<div class="search m-order">
 				<form action="member-order.html" target="_self">
-					<input type="text" id="key" class="key" placeholder="Search Order Number">
-					<button type="button" onclick="searchOrder()" class="btn i-search"><i></i></button>
+					<input type="text" name="key" class="key" placeholder="Search Order Number">
+					<button type="submit" class="btn i-search"><i></i></button>
 				</form>
 			</div>
 			
@@ -72,36 +72,6 @@
 	</div>
 
 <script type="text/javascript">
-// UNCONFIRMED--》UNCONFIRMED,CHECKED_VALID
-// PROCESSING--》 UNDELIVERED,DELIVERED
-// UNPAIED--》 UNPAIED
-// COMPLETED--》COMPLETED
-// REFUND--》CANCELLED
-var orderCode='';
-var statuses='';
-var sort='byDate';
-if($.cookie("orderCode")!=null)
-{
-	orderCode=$.cookie("orderCode");
-	document.getElementById('key').value=$.cookie("orderCode");
-}
-if($.cookie("status")!=null)
-{
-	$('.sldiv .select').text($.cookie("status"));
-	if($.cookie("status")=="UNPAIED")
-	{
-		statuses="UNPAIED";
-	}
-	else if($.cookie("status")=='PROCESSING')
-	{
-		statuses='UNDELIVERED,DELIVERED';
-	}
-	
-	/* else if($.cookie("status")=='REFUND')
-	{
-		statuses='CANCELLED';
-	} */
-}
 getOrder();
 	
 //状态选择
@@ -110,41 +80,25 @@ $('.sldiv .select').on('click',function(){
   $(".g-gallery .tabs li").removeClass('active');
 });  
 $('.sldiv .uldiv ul li').on('click',function(){  
-  statuses=$(this).text();  
-  $('.sldiv .select').text(statuses);  
+  $('.sldiv .select').text($(this).text());  
   $('.uldiv').removeClass('ulshow'); 
   $(".g-gallery .dropdown").addClass('active');
-  if(statuses=='All')
-  {
-	  statuses='';
-  }
-  else if(statuses=='PROCESSING')
-  {
-	  statuses='UNDELIVERED,DELIVERED';
-  }
-  else if(statuses=='UNCONFIRMED')
-  {
-	  statuses='UNCONFIRMED,CHECKED_VALID';
-  }
-  /* else if(statuses=='REFUND')
-  {
-	  statuses='CANCELLED';
-  } */
+  
   getOrder();
 });
 
 // 排序
 (function(){
-	var arr=[];
-	var arr2 = [];
-	var item = $('#Unpaid ul li');
-	$.each(item,function(index,item){		
-		arr.push($(item).data('total'));
-		arr2.push($(item).data('time'));
-	})
-	arr.sort();
-	arr2.sort();
 	$('.gall-price').on('click',function(){
+		var arr=[];
+		var arr2 = [];
+		var item = $('#Unpaid ul li');
+		$.each(item,function(index,item){		
+			arr.push($(item).data('total'));
+			arr2.push($(item).data('time'));
+		})
+		arr.sort();
+		arr2.sort();
 		
 		if($(this).hasClass('Total')){
 			var data = $(this).attr('data-Total');
