--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/member.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/member.html
@@ -63,8 +63,10 @@
 					</li>
 				</ul>
 				<div class="search m-order">
-					<input style="float:left;width: 90%;" type="text" id="key" placeholder="Search Order Number"/>
-					<button onclick="searchOrder();" style="float:right;width: 10%;" type="button" class="btn i-search" ><i onclick="searchOrder();"></i></button>
+				    <form action="member-order.html">
+						<input type="text" name="key" class="key" placeholder="Search Order Number">
+						<button type="submit" class="btn i-search"><i></i></button>
+					</form>
 				</div>
 			</div>
 			
