--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/index.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/index.html
@@ -36,22 +36,21 @@
 		<div class="g-index-pro">
 			<div class="left item">
 				<img src="../img/index_pr1.png">
-				<div class="item-text">
+				<div class="item-text" onclick="window.location.href='index-vitamin.html'">
 					<div class="title"><i></i>promo</div>
-					<a href="index-vitamin.html">
-						<p>Sodium Hyaluronate 1% Solution (25kg Drum) </p>
-						<div class="price"><em>$</em> <b>58</b> <span>15%</span></div>
-					</a>
+					<p>Sodium Hyaluronate 1% Solution (25kg Drum) </p>
+					<div class="price"><em>$</em> <b>58</b> <span>15%</span></div>
 				</div>
 			</div>
 			<div class="right item">
 				<img src="../img/index_bg1.png">
-				<div class="item-text">
+				<div class="item-text" onclick="window.location.href='index-plantExtract.html'">
 					<div class="center">
 						<h3>Factory<br> 
 							Examination Record</h3>
-						<a href="index-plantExtract.html">DETAILS</a>
+						<a href="#">DETAILS</a>
 					</div>
+					
 				</div>
 			</div>
 		</div>
