--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/index-vitamin.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/index-vitamin.html
@@ -39,7 +39,7 @@
 			            <b class="caret"></b>
 			        </a>
 			    </li>
-				<li class="g-menu-nav"><a href="#name" data-toggle="tab">Filter<b class="i-filter"></b></a></li>
+				<!-- <li class="g-menu-nav"><a href="#name" data-toggle="tab">Filter<b class="i-filter"></b></a></li> -->
 				
 			</ul>
 			<div id="myTabContent" class="swiper-gall">
