--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/product.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/product.html
@@ -113,7 +113,7 @@
 					</a>
 				</li>
 				<li class="item-4">
-					<a href="member.html">
+					<a href="sign.html">
 						<i></i>
 						<span>member</span>
 					</a>
