--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/product.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/product.html
@@ -45,7 +45,7 @@
 					specs
 				</div>
 				<div class="right">
-					<span>500ml , U.S.A Chicago , 60day</span>
+					<span>View stock details</span>
 					<i class="maxrig"></i> 
 				</div>
 			</div>
@@ -160,52 +160,10 @@
 			</div>
 		</div>
 		<div class="specs-display">
-			<div class="title">
-				DISPLAY FUTURE INVENTORY
-				<div class="pro-radio">
-				<input  type="checkbox" name="" id="" value="" />
-				</div>
-			</div>
-			<ul class="specs-con">
-				<li class="bort-top inventory">
-					<div class="left tabs">
-				  	<select class="por-inven" name="">
-				  		<option value="60">60day</option>
-				  		<option value="50">50day</option>
-				  		<option value="40">40day</option>
-				  		<option value="30">30day</option>
-				  		<option value="10">20day</option>
-				  	</select>
-					</div>
-					<div class="right">
-						<i class="maxrig"></i>
-					</div>
-				</li>
-				<li class="bort-top">
-					<div class="left">
-						<p>Inventory：<span>8</span></p>
-					</div>
-				</li>
-				<li class="bort-top">
-					<div class="left">
-						<p>Delivery From:<span></span></p>
-					</div>
-
-				</li>
-				<li class="bort-top">
-					<div class="left">
-						 <p class="maxday">Delivery:<span>10</span>day</p>
-					</div>
-				</li>
-				
-				<li class="bort-top">
-					<div class="left">
-						 <p class="maxday">Delivery area:<span></span></p>
-					</div>
-				</li>
-				
+			<ul class="specs-con" id="proInv">
+			
 			</ul>
-			<button>Confirm</button>
+			<button onclick="$('.g-specs-popup').hide();">Confirm</button>
 		</div>
 	</div>
 </div>
