--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/product.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/product.html
@@ -163,7 +163,7 @@
 			<ul class="specs-con" id="proInv">
 			
 			</ul>
-			<button onclick="$('.g-specs-popup').hide();">Confirm</button>
+			<button onclick="$('.g-specs-popup').hide();">Close</button>
 		</div>
 	</div>
 </div>
