--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/member.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/member.html
@@ -44,19 +44,19 @@
 			<div class="member-full">
 				<ul>
 					<li>
-						<a onclick="$.cookie('orderCode','');$.cookie('status','UNPAIED');" href="member-order.html">
+						<a href="member-order.html?status=UNPAIED">
 							<i class="i-unpaid"></i>
 							<span>Unpaid</span>
 						</a>
 					</li>
 					<li>
-						<a onclick="$.cookie('orderCode','');$.cookie('status','PROCESSING');" href="member-order.html">
+						<a href="member-order.html?status=PROCESSING">
 							<i class="i-process"></i>
 							<span>In Process</span>
 						</a>
 					</li>
 					<li>
-						<a onclick="$.cookie('orderCode','');$.cookie('status','All');" href="member-order.html">
+						<a href="member-order.html">
 							<i class="i-order"></i>
 							<span>Full Order</span>
 						</a>
