--- a/acerchem/acerchemwebservices/web/webroot/webPhone/html/member-order.html
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/html/member-order.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -48,7 +47,7 @@
 					      <li>PROCESSING</li>  
 					      <li>UNPAIED</li>  
 					      <li>COMPLETED</li>  
-					      <li>REFUND</li>
+					      <!-- <li>REFUND</li> -->
 					    </ul>  
 					  </div>  
 					</div>
